--- a/index.html
+++ b/index.html
@@ -15,4 +15,5 @@ layout: default
       <a href="{{ site.baseurl }}{{ post.url }}" class="read-more">Read More</a>
     </article>
   {% endfor %}
+  <iframe src="https://www.worldcommunitygrid.org/getDynamicImage.do?memberName=Dom Bruno I&mnOn=true&stat=1&imageNum=1&rankOn=true&projectsOn=true&special=true&link=2&memberId=988670" frameborder="0" name="di" scrolling="no" width="405px" height="190px"></iframe>
 </div>
